--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==5.2.4
 django-allauth==65.10.0
 djangorestframework==3.16.0
 drf-yasg==1.21.10
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
 psycopg==3.2.9
